Fix page top whitespace by removing empty anchor and optimizing margins

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 0.5em;
+  margin-top: 0;
   padding-left: 1em;
   padding-right: 0.5em;
   animation: intro 0.3s both;
